# bluealsa

./: README.md  autogen.sh  configure.ac  configure.ac.rej  new.patch
debian/: bluealsa.postinst  bluealsa.prerm  bluealsa.service  bluealsa.udev  changelog  control  copyright
src/: Makefile.am
src/asound/: bluealsa-ctl.c  bluealsa-pcm.c
